Fix (accordion, tabs): Remove legacy colour variables; align vars to UI Kit

--- a/src/components/bs5/accordion/accordion.scss
+++ b/src/components/bs5/accordion/accordion.scss
@@ -56,9 +56,9 @@ $accordion-button-active-icon-dark: url("data:image/svg+xml,<svg xmlns='http://w
   }
 
   .alt & {
-    --#{$prefix}accordion-bg: var(--#{$prefix}light-grey-alt);
-    --#{$prefix}accordion-btn-bg: var(--#{$prefix}grey);
-    --#{$prefix}accordion-border-color: var(--#{$prefix}soft-grey);
+    --#{$prefix}accordion-bg: var(--#{$prefix}light-background-alt);
+    --#{$prefix}accordion-btn-bg: var(--#{$prefix}light-alt-background-shade);
+    --#{$prefix}accordion-border-color: var(--#{$prefix}light-border-alt);
   }
 
   // Shared 'Dark' theme variables
@@ -68,22 +68,22 @@ $accordion-button-active-icon-dark: url("data:image/svg+xml,<svg xmlns='http://w
     --#{$prefix}accordion-btn-active-icon: #{escape-svg(
         $accordion-button-active-icon-dark
       )};
-    --#{$prefix}accordion-color: var(--#{$prefix}white);
-    --#{$prefix}accordion-btn-color: var(--#{$prefix}white);
-    --#{$prefix}accordion-active-color: var(--#{$prefix}white);
+    --#{$prefix}accordion-color: var(--#{$prefix}neutral-white);
+    --#{$prefix}accordion-btn-color: var(--#{$prefix}neutral-white);
+    --#{$prefix}accordion-active-color: var(--#{$prefix}neutral-white);
     --#{$prefix}focus: var(--#{$prefix}dark-focus);
   }
 
   // Theme specific variables
   .dark & {
-    --#{$prefix}accordion-bg: var(--#{$prefix}brand-primary);
+    --#{$prefix}accordion-bg: var(--#{$prefix}dark-background);
     --#{$prefix}accordion-btn-bg: var(--#{$prefix}dark-background-shade);
     --#{$prefix}accordion-border-color: var(--#{$prefix}dark-border);
   }
 
   .dark-alt & {
-    --#{$prefix}accordion-bg: var(--#{$prefix}dark-blue);
-    --#{$prefix}accordion-btn-bg: var(--#{$prefix}dark-blue-shade);
+    --#{$prefix}accordion-bg: var(--#{$prefix}dark-alt-background);
+    --#{$prefix}accordion-btn-bg: var(--#{$prefix}dark-alt-background-shade);
     --#{$prefix}accordion-border-color: var(--#{$prefix}dark-alt-border);
   }
 }
