--- a/src/css/qld-tokens-legacy.scss
+++ b/src/css/qld-tokens-legacy.scss
@@ -28,7 +28,7 @@ $core-default-color-status-success-lightest: #f7fbf8 !default;
 $core-default-color-status-underline-light: #ffffffb8 !default;
 $core-default-color-status-underline-dark: #03213fb8 !default;
 $core-default-color-brand-primary-dark-blue: #05325f !default;
-$core-default-color-brand-primary-sapphire-blue: #09549f !default;
+//$core-default-color-brand-primary-sapphire-blue: #09549f !default;
 $core-default-color-brand-primary-light-blue: #0085b3 !default;
 $core-default-color-brand-primary-light-green: #6bbe27 !default;
 $core-default-color-brand-secondary-darkgreen: #008635 !default;
